<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">krywitsk.CounterA1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="reset_button">Reset</string>
    <string name="counter_blank">_ _ _</string>
    <string name="count_num_blank"></string>
    <string name="increment_button">+</string>
    <string name="action_new">New Counter</string>
    <string name="action_remove">Remove Counter</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="clear_button">Clear</string>
    <string name="select_counter">Select Counter</string>
    <string name="stats_button">Counter Stats</string>
    <string name="title_activity_stats">Stats  Activity</string>
    <string name="enter_new_name">Add New Counter</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="select_stats_by">See Counter Stats By:</string>
    <string name="enter_name">Enter Name:</string>
    <string name="edit_name">Edit Name</string>

</resources>
