<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"  >

    <Button
        android:id="@+id/increment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/resetButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/clear_button"
        android:layout_below="@+id/counter_value"
        android:onClick="incrementButton"
        android:text="@string/increment_button"
        android:textSize="84sp" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/resetButton"
        android:layout_alignParentRight="true"
        android:onClick="clearButton"
        android:text="@string/clear_button" />

    <TextView
        android:id="@+id/counter_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/count_num_blank"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="108sp" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:onClick="resetButton"
        android:text="@string/reset_button" />

    <TextView
        android:id="@+id/counter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/counter_value"
        android:layout_centerHorizontal="true"
        android:text="@string/counter_blank"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="56sp" />

    <Button
        android:id="@+id/selectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/counter_name"
        android:layout_centerHorizontal="true"
        android:text="@string/select_counter"
        android:onClick="tempSelect" />

    <Button
        android:id="@+id/statsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/selectButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/stats_button"
        android:onClick="changeToStats" />

</RelativeLayout>
